[package]
name = "substrate-frame-rpc-support"
version = "11.0.0"
authors = [
	"Parity Technologies <admin@parity.io>",
	"Andrew Dirksen <andrew@dirksen.com>",
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC for FRAME's support"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-types"] }
serde = "1"
frame-support = { version = "9.0.0", path = "../../../../frame/support" }
sc-rpc-api = { version = "0.15.0", path = "../../../../client/rpc-api" }
sp-storage = { version = "9.0.0", path = "../../../../primitives/storage" }

[dev-dependencies]
scale-info = "2.1.1"
jsonrpsee = { version = "0.16.2", features = ["ws-client", "jsonrpsee-types"] }
tokio = "1.22.0"
sp-core = { version = "10.0.0", path = "../../../../primitives/core" }
sp-runtime = { version = "11.0.0", path = "../../../../primitives/runtime" }
frame-system = { version = "9.0.0", path = "../../../../frame/system" }
